[gd_scene load_steps=4 format=3 uid="uid://tmikp8px2s8q"]

[ext_resource type="Script" path="res://slider.gd" id="1_axrnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jfq2e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t5spd"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(300, 57)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 57.0
script = ExtResource("1_axrnp")

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 28.0
offset_right = 280.0
offset_bottom = 44.0
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_jfq2e")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_t5spd")
min_value = -50.0
max_value = 50.0

[node name="Label" type="Label" parent="HSlider"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_right = 40.0
offset_bottom = -13.0
grow_vertical = 0
text = "text"

[node name="Label2" type="Label" parent="HSlider"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -36.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
